# TALLER_3_MLOPS

./: .env  .gitignore  Dockerfile  Dockerfile.jupyter  README.md  docker-compose.yml  pyproject.toml
dags/: penguin_training_dag.py  penguins_pipeline.py
models/: label_encoder_island.pkl  label_encoder_sex.pkl  random_forest_model.pkl  svm_model.pkl
notebooks/: train_model.ipynb  train_models.ipynb
src/: api.py  config.py  database.py  preprocessing.py
tests/: test_preprocessing.py
