[project]
name = "taller-2-mlops"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "joblib>=1.5.3",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
]
