[project]
name = "taller-3-mlops"
version = "0.1.0"
description = "Palmer Penguins MLOps pipeline with Airflow, MLflow and FastAPI"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "joblib>=1.5.3",
    "mlflow>=2.14.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]
